<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/FragmentsLayout"
        android:orientation="vertical"
        tools:context=".presentation.ChooseLevelFragment">

        <ImageView
            android:id="@+id/img_level"
            style="@style/Icons"
            android:contentDescription="@string/image_level"
            android:src="@drawable/ic_level_girl_black" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/Headers"
            android:text="@string/choose_level_title" />

        <Button
            android:id="@+id/button_level_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_level" />

        <Button
            android:id="@+id/button_level_easy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_green_light"
            android:text="@string/easy_level" />

        <Button
            android:id="@+id/button_level_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_orange_light"
            android:text="@string/normal_level" />

        <Button
            android:id="@+id/button_level_hard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_red_light"
            android:text="@string/hard_level" />
    </LinearLayout>
</layout>